--- a/Frontend/queries.html
+++ b/Frontend/queries.html
@@ -25,16 +25,57 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #510c76 0%, #7a1fb3 50%, #510c76 100%);
+            background-size: 200% 200%;
+            animation: gradientShift 15s ease infinite;
             min-height: 100vh;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             align-items: center;
             justify-content: center;
             color: white;
             padding: 2rem;
             pointer-events: auto;
             position: relative;
+            overflow-x: hidden;
+        }
+
+        @keyframes gradientShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Left Side GIF Container */
+        .gif-container {
+            position: fixed;
+            left: 2rem;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 10;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 300px;
+            height: auto;
+        }
+
+        .gif-container img {
+            max-width: 100%;
+            height: auto;
+            filter: drop-shadow(0 8px 24px rgba(0, 0, 0, 0.4));
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+        }
+
+        @media (max-width: 1024px) {
+            .gif-container {
+                display: none; /* Hide on smaller screens */
+            }
         }
 
         /* Truman Logo - Top Left Brand Placement */
@@ -70,15 +111,19 @@
         }
 
         .container {
-            background: rgba(255, 255, 255, 0.95);
+            background: linear-gradient(145deg, rgba(81, 12, 118, 0.95) 0%, rgba(122, 31, 179, 0.9) 100%);
             backdrop-filter: blur(20px);
             border-radius: 24px;
-            box-shadow: 0 20px 60px rgba(81, 12, 118, 0.2);
-            border: 1px solid rgba(81, 12, 118, 0.1);
+            box-shadow: 
+                0 20px 60px rgba(0, 0, 0, 0.4),
+                0 0 0 1px rgba(255, 255, 255, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2),
+                inset 0 -1px 0 rgba(0, 0, 0, 0.2);
+            border: 2px solid rgba(255, 255, 255, 0.15);
             max-width: 900px;
             width: 100%;
             padding: 3rem;
-            color: #510c76;
+            color: #ffffff;
             display: flex;
             flex-direction: column;
             align-items: stretch;
@@ -86,6 +131,20 @@
             pointer-events: auto;
             position: relative;
             z-index: 1;
+            margin-left: 320px; /* Push container right to make room for GIF */
+            transform: perspective(1000px) rotateY(-2deg);
+            transition: transform 0.3s ease;
+        }
+
+        .container:hover {
+            transform: perspective(1000px) rotateY(0deg);
+        }
+
+        @media (max-width: 1024px) {
+            .container {
+                margin-left: 0;
+                transform: none;
+            }
         }
 
         .step-indicator {
@@ -106,27 +165,39 @@
         }
 
         .step-dot.active {
-            background: #667eea;
+            background: linear-gradient(145deg, #ffd700, #ffed4e);
             transform: scale(1.3);
+            box-shadow: 
+                0 0 10px rgba(255, 215, 0, 0.6),
+                0 0 20px rgba(255, 215, 0, 0.4),
+                inset 0 1px 2px rgba(255, 255, 255, 0.3);
         }
 
         .step-dot.completed {
-            background: #10b981;
+            background: linear-gradient(145deg, #10b981, #34d399);
+            box-shadow: 
+                0 0 8px rgba(16, 185, 129, 0.5),
+                inset 0 1px 2px rgba(255, 255, 255, 0.3);
         }
 
         h1 {
             font-size: 2rem;
             margin-bottom: 0.5rem;
-            color: #510c76;
+            color: #ffffff;
             text-align: center;
             font-weight: 700;
+            text-shadow: 
+                0 2px 4px rgba(0, 0, 0, 0.3),
+                0 0 20px rgba(255, 255, 255, 0.1);
+            letter-spacing: 0.5px;
         }
 
         .subtext {
             text-align: center;
-            color: rgba(81, 12, 118, 0.7);
+            color: rgba(255, 255, 255, 0.9);
             margin-bottom: 2rem;
             font-size: 1rem;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
 
         .options-grid {
@@ -147,11 +218,11 @@
 
         .option-card {
             padding: 1.5rem;
-            border: 2px solid rgba(81, 12, 118, 0.3);
+            border: 2px solid rgba(255, 255, 255, 0.2);
             border-radius: 16px;
             cursor: pointer;
             transition: all 0.3s ease;
-            background: rgba(255, 255, 255, 0.15);
+            background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
             text-align: center;
             display: flex;
@@ -165,19 +236,30 @@
             position: relative;
             z-index: 1;
             user-select: none;
+            box-shadow: 
+                0 4px 12px rgba(0, 0, 0, 0.2),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+            transform: perspective(500px) translateZ(0);
         }
 
         .option-card:hover {
-            border-color: rgba(81, 12, 118, 0.6);
-            background: rgba(255, 255, 255, 0.25);
-            transform: translateY(-4px);
-            box-shadow: 0 8px 24px rgba(81, 12, 118, 0.3);
+            border-color: rgba(255, 255, 255, 0.4);
+            background: rgba(255, 255, 255, 0.2);
+            transform: perspective(500px) translateY(-8px) translateZ(20px);
+            box-shadow: 
+                0 12px 32px rgba(0, 0, 0, 0.3),
+                0 0 20px rgba(255, 255, 255, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2);
         }
 
         .option-card.selected {
-            border-color: rgba(81, 12, 118, 0.8);
-            background: rgba(81, 12, 118, 0.2);
-            box-shadow: 0 8px 24px rgba(81, 12, 118, 0.4);
+            border-color: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 0.25);
+            box-shadow: 
+                0 12px 32px rgba(0, 0, 0, 0.4),
+                0 0 30px rgba(255, 255, 255, 0.2),
+                inset 0 2px 4px rgba(255, 255, 255, 0.3);
+            transform: perspective(500px) translateZ(10px);
         }
 
         .option-icon {
@@ -186,16 +268,20 @@
 
         .option-label {
             font-weight: 600;
-            color: #510c76;
+            color: #ffffff;
             margin-bottom: 0.5rem;
             font-size: 1.1rem;
-            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.5);
+            text-shadow: 
+                0 2px 4px rgba(0, 0, 0, 0.4),
+                0 0 10px rgba(255, 255, 255, 0.2);
+            letter-spacing: 0.3px;
         }
 
         .option-description {
             font-size: 0.875rem;
-            color: rgba(81, 12, 118, 0.8);
+            color: rgba(255, 255, 255, 0.85);
             line-height: 1.4;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         }
 
         .facilities-grid {
@@ -216,11 +302,11 @@
 
         .facility-card {
             padding: 1rem;
-            border: 2px solid rgba(81, 12, 118, 0.3);
+            border: 2px solid rgba(255, 255, 255, 0.2);
             border-radius: 16px;
             cursor: pointer;
             transition: all 0.3s ease;
-            background: rgba(255, 255, 255, 0.15);
+            background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
             display: flex;
             flex-direction: column;
@@ -233,19 +319,30 @@
             position: relative;
             z-index: 1;
             user-select: none;
+            box-shadow: 
+                0 4px 12px rgba(0, 0, 0, 0.2),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+            transform: perspective(500px) translateZ(0);
         }
 
         .facility-card:hover {
-            border-color: rgba(81, 12, 118, 0.6);
-            background: rgba(255, 255, 255, 0.25);
-            transform: translateY(-4px);
-            box-shadow: 0 8px 24px rgba(81, 12, 118, 0.3);
+            border-color: rgba(255, 255, 255, 0.4);
+            background: rgba(255, 255, 255, 0.2);
+            transform: perspective(500px) translateY(-8px) translateZ(20px);
+            box-shadow: 
+                0 12px 32px rgba(0, 0, 0, 0.3),
+                0 0 20px rgba(255, 255, 255, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2);
         }
 
         .facility-card.selected {
-            border-color: rgba(81, 12, 118, 0.8);
-            background: rgba(81, 12, 118, 0.2);
-            box-shadow: 0 8px 24px rgba(81, 12, 118, 0.4);
+            border-color: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 0.25);
+            box-shadow: 
+                0 12px 32px rgba(0, 0, 0, 0.4),
+                0 0 30px rgba(255, 255, 255, 0.2),
+                inset 0 2px 4px rgba(255, 255, 255, 0.3);
+            transform: perspective(500px) translateZ(10px);
         }
 
         .facility-thumbnail {
@@ -267,22 +364,39 @@
         .form-label {
             display: block;
             font-weight: 500;
-            color: #374151;
+            color: rgba(255, 255, 255, 0.95);
             margin-bottom: 0.5rem;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
 
         .form-input {
             width: 100%;
             padding: 0.75rem;
-            border: 2px solid #e5e7eb;
-            border-radius: 8px;
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            border-radius: 12px;
             font-size: 1rem;
-            transition: border-color 0.3s ease;
+            transition: all 0.3s ease;
+            background: rgba(255, 255, 255, 0.1);
+            color: #ffffff;
+            backdrop-filter: blur(10px);
+            box-shadow: 
+                inset 0 2px 4px rgba(0, 0, 0, 0.2),
+                0 1px 0 rgba(255, 255, 255, 0.1);
+        }
+
+        .form-input::placeholder {
+            color: rgba(255, 255, 255, 0.5);
         }
 
         .form-input:focus {
             outline: none;
-            border-color: #667eea;
+            border-color: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 0.15);
+            box-shadow: 
+                inset 0 2px 4px rgba(0, 0, 0, 0.2),
+                0 0 20px rgba(255, 255, 255, 0.2),
+                0 1px 0 rgba(255, 255, 255, 0.1);
+            transform: translateY(-2px);
         }
 
         .button-group {
@@ -311,21 +425,63 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #510c76 0%, #7a1fb3 100%);
+            background: linear-gradient(145deg, #7a1fb3 0%, #510c76 100%);
             color: white;
-            box-shadow: 0 4px 12px rgba(81, 12, 118, 0.3);
+            box-shadow: 
+                0 6px 20px rgba(0, 0, 0, 0.4),
+                0 0 0 1px rgba(255, 255, 255, 0.1),
+                inset 0 2px 4px rgba(255, 255, 255, 0.2),
+                inset 0 -2px 4px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            font-weight: 700;
+            letter-spacing: 0.5px;
+            text-shadow: 
+                0 2px 4px rgba(0, 0, 0, 0.5),
+                0 0 10px rgba(255, 255, 255, 0.2);
+            transform: perspective(500px) translateZ(0);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn-primary::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s;
+        }
+
+        .btn-primary:hover::before {
+            left: 100%;
         }
 
         .btn-primary:hover:not(:disabled) {
-            background: linear-gradient(135deg, #7a1fb3 0%, #510c76 100%);
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(81, 12, 118, 0.4);
+            background: linear-gradient(145deg, #8a2fc3 0%, #6110a6 100%);
+            transform: perspective(500px) translateY(-4px) translateZ(20px);
+            box-shadow: 
+                0 12px 32px rgba(0, 0, 0, 0.5),
+                0 0 0 1px rgba(255, 255, 255, 0.2),
+                inset 0 2px 6px rgba(255, 255, 255, 0.3),
+                inset 0 -2px 6px rgba(0, 0, 0, 0.4),
+                0 0 30px rgba(122, 31, 179, 0.4);
+        }
+
+        .btn-primary:active:not(:disabled) {
+            transform: perspective(500px) translateY(-2px) translateZ(10px);
+            box-shadow: 
+                0 6px 16px rgba(0, 0, 0, 0.4),
+                inset 0 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .btn-primary:disabled {
             opacity: 0.5;
             cursor: not-allowed;
             background: rgba(81, 12, 118, 0.3);
+            transform: none;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
         }
 
         .btn-secondary {
@@ -387,28 +543,31 @@
             transform: translateX(-50%);
             z-index: 100;
             text-align: center;
-            padding: 0.75rem 1.5rem;
-            background: rgba(255, 255, 255, 0.15);
-            backdrop-filter: blur(10px);
-            border-radius: 12px;
-            border: 1px solid rgba(81, 12, 118, 0.2);
-            max-width: 600px;
+            padding: 1rem 2rem;
+            background: rgba(81, 12, 118, 0.85);
+            backdrop-filter: blur(15px);
+            border-radius: 16px;
+            max-width: 700px;
             width: calc(100% - 3rem);
-            box-shadow: 0 4px 12px rgba(81, 12, 118, 0.2);
+            box-shadow: 
+                0 8px 24px rgba(0, 0, 0, 0.3),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
         }
 
         .survey-notice p {
             margin: 0;
-            color: rgba(81, 12, 118, 0.9);
+            color: rgba(255, 255, 255, 0.95);
             font-size: 0.875rem;
-            line-height: 1.5;
+            line-height: 1.6;
             font-weight: 500;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+            letter-spacing: 0.2px;
         }
 
         @media (max-width: 640px) {
             .survey-notice {
                 bottom: 1rem;
-                padding: 0.625rem 1rem;
+                padding: 0.75rem 1.25rem;
                 font-size: 0.75rem;
             }
         }
@@ -433,9 +592,14 @@
         </div>
     </div>
 
+    <!-- Left Side GIF -->
+    <div class="gif-container">
+        <img src="/public/logo/output-onlinegiftools.gif" alt="Truman State University" />
+    </div>
+
     <!-- Survey Notice Footer -->
     <div class="survey-notice">
-        <p>This brief survey helps Truman State University collect valuable insights and statistics to enhance our virtual tour experience and better serve our community.</p>
+        <p>Your responses help Truman State University gather meaningful insights to continuously improve our virtual tour experience and better understand the needs of our prospective students, families, and community members.</p>
     </div>
 
     <!-- Load Configuration Files -->
