--- a/Frontend/queries.html
+++ b/Frontend/queries.html
@@ -78,7 +78,7 @@
             }
         }
 
-        /* Truman Logo - Top Left Brand Placement */
+        /* Truman Logo - Top Left Brand Placement - Replaced with GIF */
         .truman-logo-header {
             position: fixed;
             top: 1.5rem;
@@ -535,20 +535,16 @@
             margin-bottom: 1rem;
         }
 
-        /* Survey Notice Footer */
+        /* Survey Notice Footer - Now part of page flow */
         .survey-notice {
-            position: fixed;
-            bottom: 1.5rem;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 100;
             text-align: center;
             padding: 1rem 2rem;
+            margin-top: 2rem;
             background: rgba(81, 12, 118, 0.85);
             backdrop-filter: blur(15px);
             border-radius: 16px;
             max-width: 700px;
-            width: calc(100% - 3rem);
+            width: 100%;
             box-shadow: 
                 0 8px 24px rgba(0, 0, 0, 0.3),
                 inset 0 1px 0 rgba(255, 255, 255, 0.1);
@@ -557,26 +553,50 @@
         .survey-notice p {
             margin: 0;
             color: rgba(255, 255, 255, 0.95);
-            font-size: 0.875rem;
-            line-height: 1.6;
-            font-weight: 500;
+            font-size: 0.75rem;
+            line-height: 1.5;
+            font-weight: 400;
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-            letter-spacing: 0.2px;
+        }
+
+        /* Copyright Footer */
+        .copyright-footer {
+            text-align: center;
+            padding: 1rem;
+            margin-top: 1rem;
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 0.75rem;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+        }
+
+        .copyright-footer .copyright-symbol {
+            font-size: 0.85rem;
+            vertical-align: middle;
+            margin: 0 2px;
+        }
+
+        .copyright-footer .registered-symbol {
+            font-size: 0.7rem;
+            vertical-align: super;
+            margin-left: 2px;
         }
 
         @media (max-width: 640px) {
             .survey-notice {
-                bottom: 1rem;
                 padding: 0.75rem 1.25rem;
-                font-size: 0.75rem;
+                font-size: 0.7rem;
+            }
+            .copyright-footer {
+                font-size: 0.7rem;
+                padding: 0.75rem;
             }
         }
     </style>
 </head>
 <body>
-    <!-- Truman Logo - Top Left Brand Placement -->
+    <!-- Truman Logo - Top Left Brand Placement - Replaced with GIF -->
     <div class="truman-logo-header">
-        <img src="/public/logo/logo.svg" alt="Truman State University" />
+        <img src="/public/logo/output-onlinegiftools.gif" alt="Truman State University" />
     </div>
 
     <div class="container">
@@ -590,16 +610,20 @@
                 <p>Initializing your personalized experience...</p>
             </div>
         </div>
+
+        <!-- Survey Notice and Copyright Footer - Part of page flow -->
+        <div class="survey-notice">
+            <p>Your responses help us improve the virtual tour experience.</p>
+        </div>
+        
+        <div class="copyright-footer">
+            <span>Truman State University<span class="registered-symbol">®</span> <span class="copyright-symbol">©</span> 2025. All rights reserved.</span>
+        </div>
     </div>
 
     <!-- Left Side GIF -->
     <div class="gif-container">
         <img src="/public/logo/output-onlinegiftools.gif" alt="Truman State University" />
-    </div>
-
-    <!-- Survey Notice Footer -->
-    <div class="survey-notice">
-        <p>Your responses help Truman State University gather meaningful insights to continuously improve our virtual tour experience and better understand the needs of our prospective students, families, and community members.</p>
     </div>
 
     <!-- Load Configuration Files -->
