--- a/Frontend/queries.html
+++ b/Frontend/queries.html
@@ -78,7 +78,7 @@
             }
         }
 
-        /* Truman Logo - Top Left Brand Placement - Replaced with GIF */
+        /* Truman Logo - Top Left Brand Placement */
         .truman-logo-header {
             position: fixed;
             top: 1.5rem;
@@ -87,12 +87,18 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(10px);
+            padding: 0.75rem 1rem;
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
 
         .truman-logo-header img {
             height: 3.5rem;
             width: auto;
-            filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.3));
+            filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.4));
             transition: transform 0.3s ease;
         }
 
@@ -104,6 +110,7 @@
             .truman-logo-header {
                 top: 1rem;
                 left: 1rem;
+                padding: 0.5rem 0.75rem;
             }
             .truman-logo-header img {
                 height: 2.5rem;
@@ -535,30 +542,6 @@
             margin-bottom: 1rem;
         }
 
-        /* Survey Notice Footer - Now part of page flow */
-        .survey-notice {
-            text-align: center;
-            padding: 1rem 2rem;
-            margin-top: 2rem;
-            background: rgba(81, 12, 118, 0.85);
-            backdrop-filter: blur(15px);
-            border-radius: 16px;
-            max-width: 700px;
-            width: 100%;
-            box-shadow: 
-                0 8px 24px rgba(0, 0, 0, 0.3),
-                inset 0 1px 0 rgba(255, 255, 255, 0.1);
-        }
-
-        .survey-notice p {
-            margin: 0;
-            color: rgba(255, 255, 255, 0.95);
-            font-size: 0.75rem;
-            line-height: 1.5;
-            font-weight: 400;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-        }
-
         /* Copyright Footer */
         .copyright-footer {
             text-align: center;
@@ -582,10 +565,6 @@
         }
 
         @media (max-width: 640px) {
-            .survey-notice {
-                padding: 0.75rem 1.25rem;
-                font-size: 0.7rem;
-            }
             .copyright-footer {
                 font-size: 0.7rem;
                 padding: 0.75rem;
@@ -594,9 +573,9 @@
     </style>
 </head>
 <body>
-    <!-- Truman Logo - Top Left Brand Placement - Replaced with GIF -->
+    <!-- Truman Logo - Top Left Brand Placement -->
     <div class="truman-logo-header">
-        <img src="/public/logo/output-onlinegiftools.gif" alt="Truman State University" />
+        <img src="/public/logo/logo.svg" alt="Truman State University" />
     </div>
 
     <div class="container">
@@ -611,11 +590,7 @@
             </div>
         </div>
 
-        <!-- Survey Notice and Copyright Footer - Part of page flow -->
-        <div class="survey-notice">
-            <p>Your responses help us improve the virtual tour experience.</p>
-        </div>
-        
+        <!-- Copyright Footer - Part of page flow -->
         <div class="copyright-footer">
             <span>Truman State University<span class="registered-symbol">®</span> <span class="copyright-symbol">©</span> 2025. All rights reserved.</span>
         </div>
