Implement image optimization and prepare Vite setup
- Add image optimization script (JPG/PNG to WebP with 53.9% average size reduction)
- Convert all 53 images in public folder to WebP format
- Update all image references in code to use .webp extension
- Add Vite configuration and React dependencies
- Create image path update script
- Add main.jsx entry point (placeholder for future Vite build)
- Update package.json with optimization and build scripts
- Maintain backward compatibility with existing Babel setup
- All routing functionality preserved (welcome -> queries -> tour intact)

Image optimization results:
- 53 images converted to WebP
- Average 53.9% file size reduction
- Faster image loading on deployed product
- All skybox images, thumbnails, and logos optimized

--- a/Frontend/queries.html
+++ b/Frontend/queries.html
@@ -797,7 +797,7 @@
                          style="pointer-events: auto; cursor: pointer;">
                         <img src="${facility.thumbnail}" alt="${facility.name}" 
                              class="facility-thumbnail" 
-                             onerror="this.src='/public/images/truman_clocktower.jpg'">
+                             onerror="this.src='/public/images/truman_clocktower.webp'">
                         <div class="option-label">${facility.name}</div>
                         <div class="option-description">${facility.description}</div>
                     </div>
