--- a/Frontend/welcome.html
+++ b/Frontend/welcome.html
@@ -126,7 +126,7 @@
         .pixelated-loading {
             width: 32px;
             height: 32px;
-            background-image: url('/public/icons/icons.png');
+            background-image: url('/public/icons/icons.webp');
             background-size: 128px 128px; /* Adjust based on actual sprite sheet size */
             background-position: 0 0;
             animation: pixelatedSpin 0.8s steps(4) infinite;
@@ -146,7 +146,7 @@
         .pixelated-rotate {
             width: 32px;
             height: 32px;
-            background-image: url('/public/icons/icons.png');
+            background-image: url('/public/icons/icons.webp');
             background-size: 64px 32px; /* Actual size: 64x32 with 2 sprites */
             background-position: 0 0; /* Start with first sprite */
             background-repeat: no-repeat;
@@ -227,10 +227,10 @@
 <body class="min-h-screen overflow-hidden">
     <!-- Background Slideshow -->
     <div class="slideshow-container">
-        <div class="slide active" style="background-image: url('/public/images/truman_clocktower.jpg');"></div>
-        <div class="slide" style="background-image: url('/public/images/truman_fountain.jpg');"></div>
-        <div class="slide" style="background-image: url('/public/images/truman_international_group.jpg');"></div>
-        <div class="slide" style="background-image: url('/public/images/truman_magruder.jpg');"></div>
+        <div class="slide active" style="background-image: url('/public/images/truman_clocktower.webp');"></div>
+        <div class="slide" style="background-image: url('/public/images/truman_fountain.webp');"></div>
+        <div class="slide" style="background-image: url('/public/images/truman_international_group.webp');"></div>
+        <div class="slide" style="background-image: url('/public/images/truman_magruder.webp');"></div>
     </div>
     
     <!-- Main Content -->
