Fix interactivity issues and restore dotted annotations in 6 directions
Phase 2 & 3 Implementation:
1. Fixed interactivity issues:
   - Increased renderer z-index to 10 for proper layering
   - Added pointer-events: auto to all interactive elements
   - Fixed OrbitControls configuration (pan, zoom, rotate enabled)
   - Improved overlay removal timing to enable interactions immediately
   - Added touch-action: none to prevent touch scrolling interference

2. Restored dotted annotations:
   - Created 6 annotations in all cardinal directions (posx, negx, posy, negy, posz, negz)
   - Implemented dotted marker design with outer ring, inner circle, and center dot
   - Added hover effects (scale up on hover)
   - Enhanced click detection with raycaster
   - Added annotation message overlay at bottom center
   - Annotations recreate after skybox transitions

3. WebP image fallback:
   - Added automatic fallback from WebP to JPG if WebP fails to load
   - Maintains image optimization benefits while ensuring compatibility

4. Removed physical spheres:
   - Confirmed only skybox sphere exists (no annotation spheres)
   - All annotations use sprite-based markers (no 3D geometry)

5. Fixed routing:
   - Queries.html redirects to /tour correctly
   - Transition overlay properly removed after React app renders

All interactions (buttons, skybox dragging, annotations) now fully functional.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -70,6 +70,9 @@
     <p class="text-xl" style="font-family: 'Playfair Display', serif;">Loading 3D environment...</p>
   </div>
   
+  <!-- Annotation Message Overlay -->
+  <div id="annotationMessage" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0, 0, 0, 0.8); color: white; padding: 12px 24px; border-radius: 8px; font-size: 16px; font-weight: 600; z-index: 1000; pointer-events: none; opacity: 0; transition: opacity 0.3s ease; display: none;"></div>
+  
   <div id="root" class="h-screen w-full flex flex-col items-stretch justify-start overflow-hidden"></div>
   
   <!-- Map Container (hidden by default) -->
