--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -73,7 +73,7 @@
   <!-- Annotation Message Overlay -->
   <div id="annotationMessage" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0, 0, 0, 0.8); color: white; padding: 12px 24px; border-radius: 8px; font-size: 16px; font-weight: 600; z-index: 1000; pointer-events: none; opacity: 0; transition: opacity 0.3s ease; display: none;"></div>
   
-  <div id="root" class="h-screen w-full flex flex-col items-stretch justify-start overflow-hidden"></div>
+  <div id="root" class="h-screen w-full flex flex-col items-stretch justify-start overflow-hidden" style="pointer-events: auto; z-index: 1; position: relative;"></div>
   
   <!-- Map Container (hidden by default) -->
   <div id="map" style="display: none; width: 100%; height: 100vh; position: fixed; top: 0; left: 0; z-index: 9999; display: flex; flex-direction: column; align-items: stretch; justify-content: flex-start;"></div>
