--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,8 +10,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- React -->
-  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+  <!-- Using development version for better error messages -->
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
 
   <!-- Three.js -->
   <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
